--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -9,25 +9,31 @@
 	--color-bg-2: hsl(224, 44%, 95%);
 	--color-theme-1: #ff3e00;
 	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
+	--color-text: rgba(255, 255, 255, 0.7);
 	--column-width: 42rem;
 	--column-margin-top: 4rem;
 	font-family: var(--font-body);
 	color: var(--color-text);
+
+	--color-anim-0: #36c3ff;
+	--color-anim-1: rgb(163, 210, 255);
+	--color-anim-2: #fc9b9b;
+	--color-anim-3: #820300;
+}
+
+@keyframes backgroundAnimation {
+    0% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
+    100% { background-position: 0% 50%; }
 }
 
 body {
-	min-height: 100vh;
-	margin: 0;
-	background-attachment: fixed;
-	background-color: var(--color-bg-1);
-	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
+    min-height: 100vh;
+    margin: 0;
+    background: linear-gradient(270deg,var(--color-anim-0), var(--color-anim-1), var(--color-anim-2), var(--color-anim-3));
+    background-size: 600% 600%;
+    animation: backgroundAnimation 15s ease infinite;
+    background-attachment: fixed;
 }
 
 h1,
